--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <header>
-      <img src="img/01-Logo.svg" alt="Изображение логотипа" />
+      <img src="img/01-logo.svg" alt="Изображение логотипа" />
     </header>
 
     <nav>
